<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Cuanto Te Cuesta</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Opciones</string>
    <string name="menu_update">Actualizar</string>
    <string name="menu_change">Cambiar Moneda</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_add_currency">Agregar Moneda</string>
    <string name="menu_remove_currency">Borrar</string>
    <string name="menu_cancel_remove_currencies">Cancelar</string>
    <string name="menu_copy">Copiar</string>
    <string name="menu_paste">Pegar</string>
    <string name="menu_share">Compartir</string>
    <string name="share_screen_title">Compartir conversión</string>
    <string name="title_activity_main">¿Cuanto Te Cuesta?</string>
    <string name="title_activity_about">Acerca de la aplicación</string>
    <string name="Ammount">Monto:</string>
    <string name="AmmountTip">$</string>
    <string name="InPesos">Oficial: </string>
    <string name="WithCreditCard">Turista: </string>
    <string name="WithSavings">Ahorro:</string>
    <string name="WithBlue">Blue:</string>
    <string name="ExchangeAgency">Casa de Cambio: </string>
    <string name="Paypal">PayPal: </string>
    <string name="WhatItCostsYou">Lo que te cuesta</string>
    <string name="application_preferences">Opciones</string>
    <string name="global_preferences">Opciones generales"</string>
    <string name="bank_exchange_rate_preferences">Cotización oficial</string>
    <string name="bank_exchange_rate">Cotización oficial</string>
    <string name="bank_exchange_rate_explained">Valor de venta de la moneda, según el banco.</string>
    <string name="bank_exchange_rate_percentage">Porcentaje a sumar/restar</string>
    <string name="bank_exchange_rate_percentage_explained">Setear en caso de que tu banco tenga una cotización diferente a la que figura en \"Cotización oficial\".</string>
    <string name="agency_exchange_rate_preferences">Cotización en casa de cambio</string>
    <string name="agency_exchange_rate">Casa de cambio</string>
    <string name="agency_exchange_rate_explained">Valor de venta de la moneda, según la casa de cambio.</string>
    <string name="exchange_rate_inverted">Invertir cotización</string>
    <string name="exchange_rate_inverted_explained_off">X ARS = 1 ZZZ</string>
    <string name="exchange_rate_inverted_explained_on">1 ARS = X ZZZ</string>
    <string name="afip_percentage">Porcentaje de recargo turista</string>
    <string name="afip_percentage_explained">¿Que porcentaje te saca el gobierno comprando en el exterior?</string>
    <string name="savings_percentage">Porcentaje AFIP para ahorro</string>
    <string name="savings_percentage_explained">¿Que porcentaje te roba la AFIP al comprar para ahorro?</string>
    <string name="paypal_percentage">Porcentaje para PayPal</string>
    <string name="paypal_percentage_explained">¿Que porcentaje se queda PayPal?</string>
    <string name="update_bank_exchange_rates">Actualizar cotizaciones</string>
    <string name="update_bank_exchange_rates_explained_on">Las cotizaciones se actualizarán automaticamente.</string>
    <string name="update_bank_exchange_rates_explained_off">Las cotizaciones se actualizarán manualmente, o se usarán las definidas por el usuario.</string>
    <string name="remember_last_conversion">Recordar última conversión</string>
    <string name="remember_last_conversion_explained">¿Recordar la última conversión realizada al reiniciar la aplicación?</string>
    <string name="use_internet_bank_exchange_rate">Usar cotización de Internet</string>
    <string name="use_internet_bank_exchange_rate_explained_on">Se usará la cotización oficial descargada de Internet.</string>
    <string name="use_internet_bank_exchange_rate_explained_off">La cotización oficial está definida por el usuario.</string>
    <string name="source_currency">Moneda a convertir</string>
    <string name="source_currency_explained">Moneda a convertir</string>
    <string name="use_light_icons">Usar iconos claros</string>
    <string name="use_light_icons_explainedOn">El menú usa iconos claros.</string>
    <string name="use_light_icons_explainedOff">El menú usa iconos oscuros.</string>
    <string name="currency_preference_screen_explained">Las preferencias en esta pantalla son solo para [ZZZ]\nPara configurar otra moneda, primero seleccionala en la pantalla anterior.</string>
    <string name="update_frequency">Frecuencia de actualización (horas)</string>
    <string name="update_frequency_explained">Las cotizaciones se actualizarán desde Internet con esta frecuencia.</string>
    <string name="show_conversions_category">Mostrar/Ocultar conversiones</string>
    <string name="show_discount">Mostrar \"Descuento %\"</string>
    <string name="show_discount_on_explained">Se aplicará el descuento ingresado</string>
    <string name="show_discount_off_explained">No se realizará ningún descuento</string>
    <string name="show_taxes">Mostrar \"Recargo %\"</string>
    <string name="show_taxes_on_explained">Se aplicará el recargo ingresado</string>
    <string name="show_taxes_off_explained">No se realizará ningún recargo</string>
    <string name="show_pesos">Mostrar \"Oficial\"</string>
    <string name="show_savings">Mostrar \"Ahorro\"</string>
    <string name="show_credit_card">Mostrar \"Turista\"</string>
    <string name="show_blue">Mostrar \"Blue\"</string>
    <string name="show_exchange_agency">Mostrar \"Casa de Cambio\"</string>
    <string name="show_paypal">Mostrar \"PayPal\"</string>
    <string name="LastUpdate">"Ultima actualización: "</string>
    <string name="updating">"Actualizando&#8230;"</string>
    <string name="LastUpdateNever">"Nunca"</string>
    <string name="title_activity_help">¿Cuanto Te Cuesta? - Ayuda</string>
    <string name="mainHelp">
        Para usar la aplicación podes empezar tocando la bandera (o el botón de la esquina superior izquierda) para elegir cual es la moneda de origen que vas a convertir hacia Pesos Argentinos.\n\n
        Luego podes ingresar un valor para <b>Monto</b>, que podría ser por ejemplo el precio de lo que te interesa comprar.\n
        En caso de que el negocio ofrezca algún tipo de porcentaje de descuento, lo podes ingresar en el campo <b>Descuento</b>.\n
		<b>Recargo</b> es útil cuando el precio dado a conocer no incluye algún porcentaje de impuesto local.\n
        En caso de que el recargo o impuesto sea un valor fijo (en vez de un porcentaje), se puede calcular en el campo <b>Monto</b>, usando la calculadora.\n\n
		<b><u>Nota</u>:</b> el valor <b>Total</b> muestra el resultado de aplicarle el % de <b>Descuento</b> al <b>Monto</b>, y a eso se le aplica el % de <b>Recargo</b>.\n
        Es importante notar que, por ejemplo, $100 - 10% + 10% no da como resultado $100, sino $99\n\n 
        
        <b><u>Nota 2</u>:</b> Todos los números que aparecen en la pantalla principal son editables. Esto quiere decir que si queres saber, por ejemplo, 
        “¿A cuantos dólares equivalen 100 pesos, si el negocio me da además un descuento de 10 dólares?” podes fijar el valor de Oficial en 100 y el de Descuento en 10,
        para saber la respuesta. \n\n 
        
        Lo que figura por debajo de <i><b>Lo que te cuesta</b></i> son todos valores en Pesos Argentinos.\n
        Para conocer los detalles de esos cálculos podes consultar las otras secciones de esta ayuda.\n
        ¡No te olvides de ir a la pantalla de <b>Opciones</b> para personalizar la aplicación!
    </string>
    <string name="pesosHelp">
		La conversión de la moneda que figura al lado de la palabra <b>“Oficial”</b> es la que se define en el menú de Opciones, en la sección <b>“Cotización oficial”</b> (dentro de <b>“Preferencias para la moneda”</b>).\n\n
		Esta cotización se puede actualizar automáticamente desde Internet, o puede ser especificada manualmente por el usuario.\n\n
		Cuando está activa la opción <b>“Actualizar automáticamente”</b>, las cotizaciones se descargarán periódicamente desde Internet (al abrir la aplicación), aunque también se pueden actualizar manualmente deslizando la pantalla principal.\n\n
		En caso de definir la cotización manualmente (cuando la opción <b>“Actualizar automáticamente”</b> está desactivada), normalmente se ingresa en la pantalla de configuración la cantidad de pesos que hay que vender para comprar 1 unidad de la moneda extranjera. Si preferís especificar cuantas unidades de la moneda extranjera equivalen a 1 Peso Argentino, se puede ingresar ese valor y activar la opción <b>“Invertir Cotización”</b>.\n\n
		Cuando definas una cotización manualmente, probablemente quieras probar de convertir el valor “$1” para asegurarte de que esté bien configurado.\n\n
		Puede haber casos en que tu banco utilice una cotización un poco diferente a la que está definida. En ese caso podes configurar un porcentaje de ajuste utilizando la opción <b>“Porcentaje a sumar/restar”</b>. Este porcentaje puede ser positivo o negativo.</string>
    <string name="savingsHelp">
        La conversión de la moneda que figura como <b>“Ahorro”</b> se calcula tomando como base el valor que se muestra para “Oficial”, y sumándole el porcentaje que te roba la <b>AFIP</b> al comprar monedas para ahorro.\n\n
		Cuando escribí esta ayuda ese porcentaje para AFIP al comprar para ahorro era del %20, pero se puede actualizar en la opción <b>“Porcentaje AFIP para ahorro”</b>.
    </string>
    <string name="creditCardHelp">
		La conversión de la moneda que figura como <b>“Turista”</b> se calcula tomando como base el valor que se muestra para “Oficial”, y sumándole el porcentaje que se queda el gobierno al comprar con tarjeta de débito/crédito en el exterior.\n\n
		Cuando escribí esta ayuda, ese porcentaje era 30%, pero como lo cambian cuando quieren de un día para el otro, ese valor lo podes actualizar en la opción <b>“Porcentaje de recargo turista”</b>.</string>
    <string name="blueHelp">
        La conversión de la moneda que figura como <b>“Blue”</b> se calcula usando la cotización informal del <b>Dólar Blue</b> (estadounidense). Esta cotización se actualiza automáticamente junto con las oficiales.\n
        Tené en cuenta que esta cotización varía bastante dependiendo de cual sea la ciudad donde compres, y otros factores.\n\n
    </string>
    <string name="agencyHelp">
		La conversión de la moneda que figura como <b>“Casa de Cambio”</b> es la que se define en el menú de Opciones, en la sección <b>“Cotización en casa de cambio”</b>.\n\n
		Esta cotización debe ser definida manualmente, porque va a depender mucho del lugar en particular que uses para vender tus Pesos Argentinos, ya sea un lugar oficial de venta o no.\n
		Como ésta opción es diferente para cada moneda, se configura en la sección <b>“Preferencias para la moneda”</b> de las Opciones.\n\n
		Normalmente se ingresa la cantidad de pesos que hay que vender para comprar 1 unidad de la moneda extranjera. Si preferís especificar cuantas unidades de la moneda extranjera equivalen a 1 Peso Argentino, se puede ingresar ese valor y activar la opción <b>“Invertir Cotización”</b>.</string>
    <string name="summary_remove_ads">Podes contribuir al desarrollo de la app comprando por única vez la opción para no mostrar publicidad.</string>
    <string name="option_remove_ads">Quitar publicidad</string>
</resources>