<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:icon="@drawable/social_share"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_currency"
        android:icon="@drawable/content_new"
        android:orderInCategory="50"
        android:title="@string/menu_add_currency"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/navigation_refresh"
        android:orderInCategory="150"
        android:title="@string/menu_update"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:title="@string/menu_settings"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="300"
        android:title="@string/menu_help"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="400"
        android:title="@string/menu_about"
        yourapp:showAsAction="never" />

</menu>